update(feat): add csa mcp support
